# SOURCES

./: .gitignore  .gitignore.save  CONTRIBUTING  Makefile  README.md  SConstruct  cpphoafparser-0.99.2.tgz  docker_build.sh  download.sh  fedora.dockerfile  greatspn_in_docker.sh  launch_in_docker.sh  output.mtx  pippo.c  run.sh  tmp.cpp
JavaGUI/: AlgebraPageTest.PNPRO  AlgebraSWNTest.PNPRO  AlgebraTest.PNPRO  BookChapter.PNPRO  CPN.PNPRO  CTL Test.PNPRO  DiningPhil.PNPRO  FilteredMultiSetExpr.PNPRO  Gluconeogenesi.PNPRO  MRNPs-prove.PNPRO  MRNPs.PNPRO  ModularClientsAndServers.PNPRO  MultiNetTest.PNPRO  SConstruct  SimpleCSLTA.PNPRO  SimpleIRENsimulation.PNPRO  TestFiringTimes.PNPRO  TestLHA.PNPRO  TestSelfLoopArc.PNPRO  ToolPresentationQEST.PNPRO  UnfoldingPageTest.PNPRO  aTest1.PNPRO  algebra2.sh  greatspn_editor.sh  pnml-test.PNPRO  unfolding2.sh  x.PNPRO
NSRC/: SConstruct
ODE-SDE/: DoxyFile  GLPKsolve.cpp  GLPKsolve.hpp  ObjectiveFunction.cpp  ObjectiveFunction.hpp  PN2ODE.sh  ParallelExecution.sh  README_generic_func.txt  VARIABILITY.sh  automa.cpp  automa.hpp  class.cpp  class.cppOLD  class.hpp  classStable.cpp  distribution.h  general.h  lsode.cpp  lsode.hpp  main_variability.cpp  makefile  readSupport.cpp  readSupport.hpp  readingAutomaton.ll  readingAutomaton.yy  readingObjectiveFunction.ll  readingObjectiveFunction.yy  reverse_heap.h
OLD/: GramAuto  HOWTOSOLUTION  HOWTOTGSPNtoHYDRA  HowToMDD  INSTALLMDD.txt  Makefile.Linux-OpenMotif  Makefile.MacOSX  Makefile.SunOS5.x  README.MacOSX  README_graphvisualization  (+1 more)
WN/SOURCE/MDWN/: CompilazioneRG2RRG.txt  GDTMCH.sh  GenDTMC.cpp  GenDTMC.h  GenDTMCOLD.cpp  MDP_minimize.cc  MDWN2MDP.sh  MDWN2MDPxCluster.sh  MDWN2POMDP.sh  MDWN2PRISM.sh  MDWN2WN.shOLD  MDWNSolve.sh  MDWNSolver.sh  Makefile.am  bounds.plot  class.h  class.hold  err.cc  function.cpp  functionGenDTMC.1cpp  functionGenDTMC.cpp  functionGenDTMC2.cpp  functionmdwn.cpp  functionmdwnCorretto.cpp  functionmdwnold.cpp  functionold.cpp  general.cpp  general.h  inc.plot  inc.ps  mdp.cc  mdp2dtmc.h  mdp_main.cc  mdwn2wn.cpp  mdwn2wnold.cpp  mdwnclass.h  parser.cpp  result.rb  result1.rb  rg2rrg.cpp  (+1 more)
WN/SOURCE/MDWN/AlgoritmiGrafi/: Albero.h  Coda.h  CodaPriorita.h  Grafo.h  GrafoOrientato.h  GrafoOrientato_ListeAdiacenza.h  GrafoOrientato_ListeIncidenza.h  Grafo_ListeAdiacenza.h  HeapBinomiale.h  HeapBinomialeRilassato.h  HeapFibonacci.h  Pila.h  a.out  cammini_minimi.h  main_cammini_minimi.cpp  main_cammini_minimi_random.cpp  visita_Albero.h  visita_Grafo.h
WN/SOURCE/MDWN/lib_header/: Grafo.h  GrafoOrientato.h  GrafoOrientato_ListeAdiacenza.h  Grafo_ListeAdiacenza.h  cammini_minimi.h
WN/SOURCE/RESRG/: Makefile.am  class.h  drawesrg.c  esrg1.cpp  gen-ctmc.pl  interface.cpp  macro.h  states.mark
WN/SOURCE/UNFOLDING/: .in  Makefile.am  NOTEPERDISTRIBUZIONE  SWN-types.c  SWN-types.h  assignment.c  assignment.h  attrib-yacc.c  attrib-yacc.h  evaluate.c  evaluate.h  funct.h  generic-def.h  global.h  layer.c  layer.h  lisp-obj_lex.l  lisp-obj_yacc.y  lista-adt.c  lista-adt.h  load.c  mainTransl.c  multiset-adt.c  multiset-adt.h  object.c  object.h  option.h  pio  save.c  set-adt.c  set-adt.h  translate.c  unfold.c  unfolding-obj.c  unfolding-obj.h  unfolding.sh  util-transl.c  util-transl.h  var-lex.h  var-yacc.h
gsrc2/: 2GS  (+108 more)
(+4474 files in other folders)
